src/test/deca/context/valid/method_call_args_int.deca
// Test context, method call with int as parameters

class Test {
    int testMethod(int x, int y) {
        return (x + y);
    }
}

{
    int z;
    Test test = new Test();
    z = test.testMethod(5,12);
}