src/test/deca/context/invalid/rvalue_init_class_to_int_inclass.deca
// Test la règle 3.28: 

class A  {
    
}

class B {

    int x = new A();
}



// Resultat:
//TODOTEST
